[package]
name = "timer_app"
version = "0.1.0"
authors = ["suttonbradley <sbradley4646@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = "0.7.0"
druid = { git = "https://github.com/linebender/druid.git" }
